@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-12-20T00:37:27Z",
-  "count_outdated" : 510,
-  "uniques_outdated" : 337,
+  "timestamp" : "2024-12-21T00:36:07Z",
+  "count_outdated" : 511,
+  "uniques_outdated" : 338,
   "count" : 512,
   "uniques" : 339,
   "clones" : [
-    {
-      "timestamp": "2024-12-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-12-13T00:00:00Z",
       "count": 1,
