@@ -1,3 +1,12 @@
+2024-12-21T00:36:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12440507986 # 516
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-21
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 337 510 / 339 512
+* notice: next accum: outdated-unq outdated-all / unq all: 338 511 / 339 512
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-12-06] / []
+
 2024-12-20T00:37:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12423237412 # 515
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-20
